--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "description": "A package using versioning for autotests",
   "author": "Andrii Prykhodko",
   "dependencies": {
-    "protractor": "5.4.1"
+    "protractor": "5.4.1",
+    "ramda": "0.23.0"
   },
-  "engine": "node >= 0.4.1"
+  "engine": "node >= 0.4.1",
+  "scripts": {
+    "test": "sh autorun.sh"
+  }
 }
