Use hooks in npm install

--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "autotests",
   "description": "A package using versioning for autotests",
   "author": "Andrii Prykhodko",
-  "dependencies": {
+  "devDependencies": {
+    "jasmine-spec-reporter": "^4.2.1",
     "protractor": "5.4.1",
     "ramda": "0.23.0"
   },
   "engine": "node >= 0.4.1",
   "scripts": {
-    "test": "sh autorun.sh"
+    "test": "node node_modules/protractor/bin/protractor config.js",
+    "postinstall" : "node node_modules/protractor/bin/webdriver-manager update"
   }
 }
